희정_마이페이지닉네임변경중복확인수정

--- a/src/main/webapp/resources/css/login_join/loginAndJoin.css
+++ b/src/main/webapp/resources/css/login_join/loginAndJoin.css
@@ -416,6 +416,9 @@ span img{
     height: calc(2rem)!important;
     width: 130px;
 }
+.checkEmailAuth{
+	padding: 0 0 20px!important;
+}
 .btn-submit{
 	width: 280px!important;
     border-radius: 15px!important;
