희정_새글표시변경

--- a/src/main/webapp/resources/css/board/board.css
+++ b/src/main/webapp/resources/css/board/board.css
@@ -126,9 +126,8 @@
 }
 .isNewContent{
 	text-align: center;
-}
-.isNewContent img{
-	max-width:65%;
+    color: #f9d312;
+    font-size: 13px;
 }
 .isNoticeList td.bTitle a{
     color: #59bfbf!important;
