혜인 - 마이페이지 포인트 인아웃 컬러변경, 클래스 신청한 회원 팝업 추가, Timestamp 분 단위까지, 스크랩 선택 삭제

--- a/src/main/webapp/resources/css/user/memberInfo.css
+++ b/src/main/webapp/resources/css/user/memberInfo.css
@@ -34,3 +34,24 @@ td{
 	color: #e7438b;
 	margin-right: 10px;
 }
+
+/* classjoin_list.jsp */
+
+.class_img{
+	width: 80%;
+}
+.cj_info{
+	text-align:center;
+	font-size:0.9rem;
+}
+.cName{
+	font-weight:bold;
+	color: #e7438b;
+}
+.cj_info, .container{
+	text-align:center;
+}
+
+
+/* classJoin_list.jsp  */
+
