--- a/src/main/webapp/resources/css/user/mypage.css
+++ b/src/main/webapp/resources/css/user/mypage.css
@@ -60,7 +60,7 @@ p {
 }
 
 .img-circle {
-	width: 30%;
+	width: 150px;
 	margin-left: 20%;
 	overflow: hidden;
 	border-radius: 50%;
@@ -153,8 +153,8 @@ tr.bordered td {
 	padding-left: 20%;
 }
 
-.page-link {
-	border: none;
+	.page-link {
+	border:none;
 	margin-left: 20px;
 	color: #26274c;
 	background: #ffffff;
@@ -164,6 +164,65 @@ tr.bordered td {
 .page-link:hover {
 	background: #59bfbf;
 	color: #ffffff;
+}
+.text-wrap{
+	
+}
+.text_bold {
+	color: #59bfbf;
+	font-weight: bold;
+	font-size: 1.25rem;
+}
+tr.bordered {
+	border-bottom: 1px solid #BDBDBD;
+}
+th{
+	font-size:0.75rem;
+}
+td{
+	font-size:0.8rem;
+}
+.po_In{
+	color : #59bfbf;
+}
+.po_Out{
+	color: #e7438b;
+}
+
+.choosePick{
+	text-align: center;
+    max-width: 400px;
+    margin-top: 5px;
+}
+.choosePick #file_route{
+	vertical-align: middle;
+    display: block;
+    width: 300px;
+    line-height: 28px;
+    font-size: 11px;
+    padding: 0;
+    border: 0;
+    margin: 0 auto;
+    box-shadow: 0 0 black;
+    text-align: center;
+}
+.choosePick label{
+	padding: 5px 10px!important;
+    font-size: 14px!important;
+    vertical-align: initial!important;
+    cursor: pointer!important;
+    width: 100px;
+    background: #59bfbf;
+    color: #fff;
+    border: initial;
+    border-radius: 10px;
+    text-align: center;
+}
+.choosePick label input{
+	position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
 }
 /*
 
