--- a/src/main/webapp/resources/css/class/classView.css
+++ b/src/main/webapp/resources/css/class/classView.css
@@ -131,13 +131,11 @@
 	width: 100%;
 }
 
-.clContent .clContentRight .clContentDetailBody .list-group .list-group-item
-	{
+.clContent .clContentRight .clContentDetailBody .list-group .list-group-item {
 	border: none;
 }
 
-.clContent .clContentRight .clContentDetailBody .list-group .applyMenu .classJoinForm .applyBtn
-	{
+.clContent .clContentRight .clContentDetailBody .list-group .applyMenu .classJoinForm .applyBtn {
 	width: 100%;
 	font-weight: 1000;
 	background-color: #59bfbf;
@@ -147,8 +145,7 @@
 	border-radius: 10px;
 }
 
-.clContent .clContentRight .clContentDetailBody .list-group .applyMenu .classJoinForm .applyBtn:hover
-	{
+.clContent .clContentRight .clContentDetailBody .list-group .applyMenu .classJoinForm .applyBtn:hover {
 	background-color: #e7438b;
 	border: none;
 	outline: 0;
@@ -212,15 +209,13 @@
 	color: #ffffff;
 }
 
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-body p img
-	{
+.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-body p img {
 	width: 100%;
-	height: 300px;
+	height: auto;
 	border-radius: 10px;
 }
 
-.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-body .table
-	{
+.clContent .clContentRight .clContentDetailBody .applyMenu .classJoinForm .modal-body .table {
 	font-size: 110%;
 }
 
