희정_유저버튼신고모달창프론트끝

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -42,3 +42,44 @@ section{padding:40px 0;}
 	color: #ffffff;
 }
 /* 페이징 CSS */
+
+/* 신고창 CSS */
+.reportModalBox .modal-dialog{
+	max-width: 420px!important;
+	margin: 5% auto!important;
+}
+.reportModalBox button.close:hover{
+	color: #e7438b!important;
+}
+.reportModalBox .modal-header .modal-title{
+	font-size: 20px!important;
+    color: #e7438b!important;
+}
+.reportModalBox .modal-body{
+	padding: 15px 30px 20px;
+}
+.reportModalBox .modal-body .reportBoxIcon{
+	text-align: center;
+    margin-bottom: 10px;
+}
+.reportModalBox .modal-body .reportBoxIcon img{
+	max-width:35%;
+}
+.reportModalBox .modal-body input[type=radio]{
+	margin: 8px 8px 8px 0!important;
+}
+.reportModalBox .modal-body textarea{
+	margin-top:10px;
+}
+.reportModalBox .modal-body .form-group{
+	padding: 20px 15px;
+    margin-bottom: 0;
+    font-size: 14px;
+    background: #f5f5f5!important;
+}
+.reportModalBox .modal-footer .reportBtn{
+	border: 1px solid #e7438b;
+    color: #e7438b;
+    font-size:14px;
+}
+/* 신고창 CSS */
