희정_신고누적시회원차단+로그인차단구현

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -79,7 +79,8 @@ section{padding:40px 0;}
 }
 .reportModalBox .modal-footer .reportBtn{
 	border: 1px solid #e7438b;
-    color: #e7438b;
+    color: #e7438b!important;
     font-size:14px;
+    cursor: pointer;
 }
 /* 신고창 CSS */
