--- a/src/main/webapp/resources/css/user/msg.css
+++ b/src/main/webapp/resources/css/user/msg.css
@@ -61,6 +61,10 @@
 .messageForm .modal-body{padding: 20px!important;font-size: 14px!important;}
 .messageForm .form-group{margin-bottom:0!important;}
 .messageForm .modal-footer button{font-size:14px;}
+.messageListpaging .pagination .page-item a{
+	margin-left: 0!important;
+    padding: .5rem!important;
+}
 /* message 여기까지 */
 
 /* messageView */
