희정_신고css적용

--- a/src/main/webapp/resources/css/board/boardView.css
+++ b/src/main/webapp/resources/css/board/boardView.css
@@ -301,7 +301,8 @@
 }
 .replyActive .reReplyBtn a,
 .replyActive .reModifyBtn a,
-.replyActive .reDeleteBtn a{
+.replyActive .reDeleteBtn a,
+.replyActive .reReportBtn a{
 	font-size: 14px;
     color: #5d5a5a;
     cursor: pointer;
