--- a/src/main/webapp/resources/css/board/board.css
+++ b/src/main/webapp/resources/css/board/board.css
@@ -51,7 +51,7 @@
 .boardSelectorWrap .writeBtnWrap a{
 	display: block;
     background: #59bfbf;
-    color: #fff;
+    color: #fff!important;
     text-align: center;
     padding: 10px 0;
     border-radius: 5px;
