희정_로그인프론트조금수정+헤더유저프로필사진표시

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -54,6 +54,9 @@
 #headerLogin {
 	max-width: 11%;
 }
+.afterLoginProfile{
+	border-radius: 50%;
+}
 #loginNickname {
 	font-size: 80%;
 	color: #26274c;
