--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -13,6 +13,16 @@ section{padding:40px 0;}
 .userBtn:hover{
 	color:#59bfbf!important;
 }
+
+
+.clUser {
+	display: inline!important;
+}
+
+.clUserE {
+	display: inline!important;
+}
+
 .dropdown-menu{
 	height: 115px!important;
 	padding: 10px!important;
@@ -31,7 +41,6 @@ section{padding:40px 0;}
 /* 페이징 CSS */
 .page-link {
 	border:none;
-	margin-left: 20px;
 	color: #26274c;
 	background: #ffffff;
 	font-weight: 700;
