희정_헤더픽스

--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -7,7 +7,10 @@
 	padding: 0px;
 }
 /* 공통 스타일 */
-
+#headerAll{
+	position: fixed;
+    z-index: 999;
+}
 #headerMain{
 	height: 90px;
     border-bottom: 1px solid #ddd;
