민영 수정사항
1. 메인페이지 완성
2. header : position fixed에 따른 페이지들에 대해 padding-top 적용

--- a/src/main/webapp/resources/css/user/mypage.css
+++ b/src/main/webapp/resources/css/user/mypage.css
@@ -3,6 +3,10 @@
 /*
 * 마이페이지 css 부
 */
+.mypageWrap {
+	padding-top: 100px;
+}
+
 .bordered a {
 	color: inherit;
 }
@@ -365,6 +369,10 @@ td {
 회원탈퇴 css
 
 */
+.withdrawWrap {
+	padding-top: 120px;
+}
+
 .required {
 	color: #e7438b;
 	margin-right: 10px;
