--- a/src/main/webapp/resources/css/login_join/loginAndJoin.css
+++ b/src/main/webapp/resources/css/login_join/loginAndJoin.css
@@ -11,7 +11,7 @@ button:focus{outline: initial!important;}
 	* 로그인페이지
 	*/
 .sc-login{
-	padding:40px 0 20px!important;
+	padding:160px 0 20px!important;
 }
 .loginMainTitle{
 	text-align: center;
@@ -114,7 +114,7 @@ span img{
 	* 회원가입 유형 선택 페이지
 	*/
 .sc-chooseJoin{
-	padding: 80px 0!important;
+	padding: 160px 0!important;
 }
 .sc-chooseJoin .welcomeEE{
 	text-align: center;
@@ -158,7 +158,7 @@ span img{
 	* 아이디 비밀번호 찾기 페이지
 	*/
 .sc-forgot{
-	padding:80px 0!important;
+	padding:160px 0!important;
 }
 .sc-forgot .forgot-wrapper{
 	margin-top: 40px;
@@ -313,9 +313,12 @@ span img{
 	/*
 	* 회원가입
 	*/
+.joinForm-wrapper {
+	padding-top: 120px;
+}
+	
 .sc-welcome{
 	text-align: center;
-    margin: 40px 0 0;
 }
 .sc-welcome .welcomeEE{
 	color: #59bfbf;
