혜인 - 운영자 페이지 추가, 마이페이지 수정중

--- a/src/main/webapp/resources/css/user/mypage.css
+++ b/src/main/webapp/resources/css/user/mypage.css
@@ -159,7 +159,7 @@ span.checkInfo {
 	background-color: #59bfbf;
 }
 
-#myinfobtn, #mycontentbtn, #myscrapbtn, #mypointbtn, #myclassbtn {
+#myinfobtn, #mycontentbtn, #myscrapbtn, #mypointbtn, #myclassbtn, #mpRVBtn {
 	margin-right: 20px;
 	width: 10%;
 	background-color: #59bfbf;
