민영 : 메인화면에 새글작성 버튼 추가

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -9,6 +9,22 @@
 	width: 100%;
 }
 
+.writeBtn {
+	max-width:100px;
+	display: block; 
+	background: #59bfbf;
+	color: #fff!important; 
+	text-align: center;
+	padding: 10px 0;
+	border-radius: 5px;
+	cursor: pointer;
+	font-size:14px;"
+}
+
+.writeBtn:hover {
+	background: #41a0a0!important;
+}
+
 .carouselTitle {
 	font-size: 250%;
 	font-weight: 700;
@@ -22,7 +38,6 @@
 .carousel-item img {
 	width: 100%;
 	height: auto;
-	"
 }
 
 .carousel-item p b {
