--- a/src/main/webapp/resources/css/board/boardView.css
+++ b/src/main/webapp/resources/css/board/boardView.css
@@ -184,6 +184,9 @@
     color: #5d5a5a;
     text-decoration: underline;
 }
+.contentWrap{
+	position: relative;
+}
 .contentMain{
 	padding: 15px;
     margin: 20px 0;
@@ -203,18 +206,36 @@
     color: #fff;
     background: #313398;
     margin: 0 20px;
+    width: 45px;
+    height: 45px;
 }
 .btnWrap .likeBtn{
 	font-size: 18px;
     color: #fff;
     background: #2cc5c5;
     margin: 0 20px;
+    width: 45px;
+    height: 45px;
 }
 .btnWrap .unlikeBtn{
 	font-size: 18px;
     color: #fff;
     background: #e7438b;
     margin: 0 20px;
+    width: 45px;
+    height: 45px;
+}
+.btnWrap .shareBtn{
+	margin: 0 20px;
+    width: 45px;
+    height: 45px;
+}
+.btnWrap .shareBtn .share{
+	display: block;
+    cursor: pointer;
+}
+.btnWrap .shareBtn .share img{
+	max-width:100%;
 }
 .listBtn{
 	text-align: center;
@@ -229,7 +250,6 @@
     color: #5f5f5f;
     display: block;
 }
-
 .replyWrapper{
 	margin-top: 40px;
 }
